--- a/templates/index.html
+++ b/templates/index.html
@@ -616,6 +616,22 @@ background: var(--nav-bg);
     </p>
   </div>
 
+    <div class="content-second">
+    <h1>Sapanca Gölü’nde nesli tükenmekte olan su samuru görüldü.</h1>
+    <p class="paragraph">
+     Dünya Doğa ve Doğal Kaynakları Koruma Birliği (IUCN) tarafından nesli tükenmek üzere olan hayvanlar kategorisinde yer alan su samuru, Sapanca Gölü’nde bir vatandaş tarafından görüntülendi. 
+    </p>
+    <p class="paragraph">
+      Dünya Doğa ve Doğal Kaynakları Koruma Birliği tarafından nesli tükenmek üzere olan hayvanlar kategorisinde yer alan ve Sapanca ilçesi Kırkpınar Mahallesi mevkiinde Sapanca Gölü’nde görülen su samuru, Süha Uzun isimli vatandaş tarafından cep telefonuyla kayda alındı. Görüntülerde, su samurunun sazlıkları eşelediği, iskeleye çıkması ve bir süre dolaştıktan sonra göle dalarak gözden kaybolması yer alıyor. Görüntüleri çeken Uzun ise nesli tükenme tehlikesinde olan bir hayvanı kayda aldığı için duyduğu mutluluğu ifade etti.
+    </p>
+    <p class="paragraph">
+      Yazılımcı olan ve müsait zamanlarında doğada gözlem yapan Süha Uzun, “Müsait zamanlarımda devamlı doğadayım, hayvan gözlemi yapıyorum. Doğalda yaşam ilgi duyduğum bir alan. Bu alanla alakalı da gözlemlerimi sürekli sürdürüyorum. Videoyu çektiğim gün burada eşimin doğum gününü kutluyorduk. Kedi sandım ilk başta iskelenin üzerine çıktı, gözlemlemek istedim acaba kedi balık mı avlamaya çalışıyor ne yapıyor diye. Ondan sonra biranda kafasını suyun içerisine sokarak gölün içerisine atladı. Ve o esnada kedi olmadığını anladım. Aklıma direk su samuru geldi zaten. Takip ettiğimde ileriye doğru gitti. Yüzeye çıktığında ağzında bir balıkla çıktı ve o esnada su samuru olduğunu tamamen anlamış oldum. Daha sonra tekrar iskeleye çıktı ve sonrasında da tekrardan suyun derinliklerine daldı” dedi.
+    </p>
+    <p class="paragraph">
+      Sapanca Gölü'nde su samurunu görmenin umut verici olduğunu belirten Uzun, “Bu tabi benim için sevinç, mutluluk verici bir olay. Su samurlarının nesli tükeniyor, böyle bir hayvanı görmüş olmak özellikle yanımda 4,5 yaşındaki kızımla birlikte görmek güzel bir duygu oldu. İlk su samurunu gördüğüm zaman direk telefona sarıldım, çünkü bu anı ölümsüzleştirmeliydim. Nesli tükenmekte olan bir hayvanı görebilmek bir yandan umut verici oldu. Daha öncelerinde televizyonlarda izlediğim su samurunu Sapanca Gölü’nde görmek umut verici. Bildiğim ve araştırdığım kadarıyla temiz sularda yaşayan bir canlı. Sapanca Gölü’nün çok kirlendiğini düşünüyordum fakat bu görüntüleri görmek umut verici oldu. Umarım gölümüz daha fazla canlıya ev sahipliği eder diye düşünüyorum” diye konuştu.
+    </p>
+  </div>
+  
 <div id="videoModal" class="video-overlay">
   <button class="close-video">X</button>
 
