--- a/templates/page3.html
+++ b/templates/page3.html
@@ -154,20 +154,22 @@ background: var(--nav-bg);
   background: rgba(255,255,255,0.18);
 }
 
-.nav-links {
-  display: flex;
-  gap: 25px;
-  flex-wrap: wrap;
-}
-
 .nav-logo {
   height: 40px;
   width: auto;
 }
-
-.nav-links button {
-  margin-left: 10px;
+	  
+.nav-links {
+  display: flex;
+  gap: 25px;
+  flex-wrap: wrap;
+  align-items: center;   
 }
+	  
+.nav-links button {
+  margin-left: 0;        
+}
+
 	  
   </style>
 </head>
