--- a/templates/page3.html
+++ b/templates/page3.html
@@ -59,7 +59,7 @@ body.dark {
   border-radius: 25px;
   padding: 25px 30px;
   margin: 30px auto;
-  max-width: 1800px;           
+  max-width: 90%;           
   width: 100%;
   z-index: 2;
   color: var(--text-color);
