--- a/templates/page3.html
+++ b/templates/page3.html
@@ -34,6 +34,7 @@ body.dark {
 }
 	  
     * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
     }
@@ -44,15 +45,6 @@ body.dark {
       margin: 0;
       color: var(--text-color);
       overflow-x: hidden; 
-    }
-
-    .container {
-      width: 100%;
-      margin: auto;
-      font-weight: 900;
-      text-transform: uppercase;
-      text-align: center;
-      padding: 0 0 200px;
     }
 
 .content {
@@ -120,11 +112,11 @@ body.dark {
     }
 
 	  p {
-outline-color: blue;
+outline-color: var(--border-color);
 padding: 5px;
 }
 
-	  
+
     .navbar {
   width: 100%;
 background: var(--nav-bg);
@@ -154,20 +146,19 @@ background: var(--nav-bg);
   background: rgba(255,255,255,0.18);
 }
 
-.nav-logo {
-  height: 40px;
-  width: auto;
-}
-	  
 .nav-links {
   display: flex;
   gap: 25px;
   flex-wrap: wrap;
-  align-items: center;   
 }
-	  
+
+.nav-logo {
+  height: 40px;
+  width: auto;
+}
+
 .nav-links button {
-  margin-left: 0;        
+  margin-left: 10px;
 }
 
 	  
