--- a/templates/page2.html
+++ b/templates/page2.html
@@ -97,12 +97,14 @@ body.dark {
       margin-bottom: 20px;
       font-size: 1.1em;
     }
-
-    h1 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
     
+  h1 {
+  font-family: 'Lato', sans-serif;
+  font-weight:300;
+  letter-spacing: 2px;
+  font-size:48px;
+  text-align: center;
+} 
 .btn {
   display: inline-block;
   background-color: var(--btn-bg);
