--- a/templates/page3.html
+++ b/templates/page3.html
@@ -13,18 +13,19 @@ body {
 }
 
 h1 {
-  font-family: 'Lato', sans-serif;
   font-weight:300;
   letter-spacing: 2px;
   font-size:48px;
 }
 
 .header {
-  position:relative;
+position: relative;
+  overflow: hidden;
   text-align:center;
   background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%);
   color: var(--btn-bg);
 }
+
 
 .inner-header {
   height:65vh;
@@ -39,15 +40,20 @@ h1 {
   align-items: center;
   text-align: center;
 }
-
+	  
 .waves {
-  position:fixed;
+  position: fixed;
+  bottom: 0;
+  left: 0;
   width: 100%;
-  height:15vh;
-  margin-bottom:-7px; 
-  min-height:100px;
-  max-height:150px;
+  height: 15vh;
+  min-height: 100px;
+  max-height: 150px;
+  z-index: 10;
+  pointer-events: none; 
 }
+
+
 
 .content-wave {
   position:relative;
@@ -162,7 +168,6 @@ body.dark {
       color: var(--btn-bg);
       text-align: center;
       margin-bottom: 20px;
-	  font-family: 'Lato', sans-serif;
 	  font-weight: 300;
   	  letter-spacing: 2px;
   	  font-size:48px;
@@ -207,7 +212,6 @@ body.dark {
 	  p {
 outline-color: var(--border-color);
 padding: 5px;
-  font-family: 'Lato', sans-serif;
   letter-spacing: 1px;
   font-size:14px;
 }
@@ -277,12 +281,6 @@ background: var(--nav-bg);
 
 	<div class="header">
 <div class="inner-header flex">
-<path fill="#FFFFFF" stroke="#000000" stroke-width="10" stroke-miterlimit="10" d="M57,283" />
-<g><path fill="#fff"
-d="M250.4,0.8C112.7,0.8,1,112.4,1,250.2c0,137.7,111.7,249.4,249.4,249.4c137.7,0,249.4-111.7,249.4-249.4
-C499.8,112.4,388.1,0.8,250.4,0.8z M383.8,326.3c-62,0-101.4-14.1-117.6-46.3c-17.1-34.1-2.3-75.4,13.2-104.1
-c-22.4,3-38.4,9.2-47.8,18.3c-11.2,10.9-13.6,26.7-16.3,45c-3.1,20.8-6.6,44.4-25.3,62.4c-19.8,19.1-51.6,26.9-100.2,24.6l1.8-39.7		c35.9,1.6,59.7-2.9,70.8-13.6c8.9-8.6,11.1-22.9,13.5-39.6c6.3-42,14.8-99.4,141.4-99.4h41L333,166c-12.6,16-45.4,68.2-31.2,96.2	c9.2,18.3,41.5,25.6,91.2,24.2l1.1,39.8C390.5,326.2,387.1,326.3,383.8,326.3z" />
-</g>
 </div>
 
 <div>
@@ -292,7 +290,7 @@ viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
 <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
 </defs>
 <g class="parallax">
-<use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7" />
+<use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7)" />
 <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
 <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
 <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
