--- a/templates/index.html
+++ b/templates/index.html
@@ -436,7 +436,7 @@ background: var(--nav-bg);
 <nav class="navbar">
   <img src="{{ url_for('static', filename='Favicon.png') }}" class="nav-logo" alt="Logo">
   <div class="nav-links">
-    <a id="openVideoBtn">Video</a>
+    <button href="#" id="openVideoBtn">Video</button>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSc-mcaaHfzqC5UPbGjzMz0C7v7CHU9Qx1w8emhHqgNwNbpHtg/viewform?usp=dialog" target="_blank" rel="noopener noreferrer">Anket</a>
     <a href="/">Ana Sayfa</a>
     <a href="/hikaye">Hikayeler</a>
