--- a/templates/page3.html
+++ b/templates/page3.html
@@ -19,7 +19,8 @@ h1 {
 }
 
 .header {
-position: relative;
+position: fixed;
+  z-index: -1;
   overflow: hidden;
   text-align:center;
   background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%);
@@ -36,6 +37,7 @@ position: relative;
 
 .flex { 
   display: flex;
+  z-index: -1;
   justify-content: center;
   align-items: center;
   text-align: center;
@@ -43,6 +45,7 @@ position: relative;
 	  
 .waves {
   position: fixed;
+  z-index: -1;
   bottom: 0;
   left: 0;
   width: 100%;
@@ -57,6 +60,7 @@ position: relative;
 
 .content-wave {
   position:relative;
+  z-index: -1;
   height:20vh;
   text-align:center;
   background-color: var(--card-bg);
