--- a/templates/index.html
+++ b/templates/index.html
@@ -425,8 +425,14 @@ background: var(--nav-bg);
   width: auto;
 }
 
-.nav-links button {
+.nav-links int-btn {
   margin-left: 10px;
+  color: white;
+  font-weight: 600;
+  text-decoration: none;
+  padding: 0.2rem 0.5rem;
+  border-radius: 8px;
+  transition: background 1s, color 1s;
 }
     
  </style>
