--- a/templates/page3.html
+++ b/templates/page3.html
@@ -153,6 +153,7 @@ body.dark {
   margin: 30px auto;
   max-width: 90%;           
   width: 100%;
+  opacity: 0.75;
   z-index: 2;
   color: var(--text-color);
   background-color: var(--card-bg);
@@ -162,7 +163,8 @@ body.dark {
   font-size: 1.1rem;
 }
     .paragraph {
-      font-size: 1.5em;  
+      font-size: 1.5em;
+	  opacity: 0.75;
       color: var(--btn-bg);
       text-align: justify;
       margin-bottom: 20px;
@@ -171,6 +173,7 @@ body.dark {
     .title {
       color: var(--btn-bg);
       text-align: center;
+	  opacity: 0.75;
       margin-bottom: 20px;
 	  font-weight: 300;
   	  letter-spacing: 2px;
@@ -181,6 +184,7 @@ body.dark {
   display: inline-block;
   background-color: var(--btn-bg);
   color: white;
+  opacity: 0.75;
   padding: 12px 25px;
   border-radius: 25px;
   text-decoration: none;
@@ -195,6 +199,7 @@ body.dark {
 .btn:hover {
   background-color: var(--btn-hover);
   transform: translateY(-3px);
+  opacity: 1;
   box-shadow: 0 6px 15px rgba(0,0,0,0.3);
 }
 
@@ -216,6 +221,7 @@ body.dark {
 	  p {
 outline-color: var(--border-color);
 padding: 5px;
+	opacity: 0.75;
   letter-spacing: 1px;
   font-size:14px;
 }
