--- a/templates/index.html
+++ b/templates/index.html
@@ -401,18 +401,21 @@ background: var(--nav-bg);
 }
 
 
-.navbar a {
+.navbar a, .navbar button {
+  background: transparent;
+  border: none;
   color: white;
   font-weight: 600;
-  text-decoration: none;
   padding: 0.2rem 0.5rem;
   border-radius: 8px;
+  cursor: pointer;
   transition: background 1s, color 1s;
 }
 
-.navbar a:hover {
+.navbar a:hover, .navbar button:hover {
   background: rgba(255,255,255,0.18);
 }
+
 
 .nav-links {
   display: flex;
@@ -424,16 +427,6 @@ background: var(--nav-bg);
   height: 40px;
   width: auto;
 }
-
-.int-btn {
-  margin-left: 10px;
-  color: white;
-  font-weight: 600;
-  text-decoration: none;
-  padding: 0.2rem 0.5rem;
-  border-radius: 8px;
-  transition: background 1s, color 1s;
-}
     
  </style>
 </head>
@@ -442,7 +435,7 @@ background: var(--nav-bg);
 <nav class="navbar">
   <img src="{{ url_for('static', filename='Favicon.png') }}" class="nav-logo" alt="Logo">
   <div class="nav-links">
-    <button href="#" id="openVideoBtn" class="int-btn">Video</button>
+    <button href="#" id="openVideoBtn">Video</button>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSc-mcaaHfzqC5UPbGjzMz0C7v7CHU9Qx1w8emhHqgNwNbpHtg/viewform?usp=dialog" target="_blank" rel="noopener noreferrer">Anket</a>
     <a href="/">Ana Sayfa</a>
     <a href="/hikaye">Hikayeler</a>
