--- a/templates/index.html
+++ b/templates/index.html
@@ -403,6 +403,7 @@ background: var(--nav-bg);
 
 .navbar a {
   background: transparent;
+  text-decoration: none;
   border: none;
   color: white;
   font-weight: 600;
