--- a/templates/page3.html
+++ b/templates/page3.html
@@ -177,7 +177,7 @@ body.dark {
       margin-bottom: 20px;
 	  font-weight: 300;
   	  letter-spacing: 2px;
-  	  font-size:48px;
+  	  font-size: 48px;
     }
 	  
 .btn {
@@ -353,7 +353,8 @@ Suijin: <br>
 
 -Halk bu masum insanları izlerken aynı zamanda ne kadar yanlış bir şey yaptıklarının farkına varmışlardı.Suijin köyü tekrar hayata döndürdü ve Afrika’nın susuzluğu da bir milim azalmış oldu.</p>
   </div>
-	<div class="content"> 
+	<div class="content">
+		<h1 class="title font-size: 96px;">Son Su Kaynağı</h1>
 		<h4 class="title">Bölüm 1.1: Suların Sessizliği</h4>
 		<p class="paragraph">
 Yıl 2054’tü. <br>
