--- a/templates/page2.html
+++ b/templates/page2.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Su ile İlgili Şiir</title>
+  <link rel="icon" href="{{ url_for('static', filename='Favicon.png') }}" type="image/png">
+  <link rel="shortcut icon" href="{{ url_for('static', filename='Favicon.png') }}" type="image/png">
   <style>
 
     
@@ -208,17 +210,17 @@ background: var(--nav-bg);
       <h3>Ab gibi akarsın gönül şahrasında</h3>
       <h3>Her katre bir sırdır dilden duada</h3>
       <h3>Ahest düşersin taşır, koynuna</h3>
-      <h3>Ve taş dahi incinir, gönül şemasında</h3>
+      <h3>Ve taş dahi incinir, gönül semasında</h3>
       <br>
-      <h3>Su, ey ezeli hağme,</h3>
+      <h3>Su, ey ezeli nağme,</h3>
       <h3>Gönlün gamını siler</h3>
       <h3>Ruhun hararetini dindirir,</h3>
-      <h3>Kalbe şafa bahseder.</h3>
+      <h3>Kalbe şifa bahseder.</h3>
       <br>
       <h3>Ab olur umanana karışırsın,</h3>
-      <h3>Bahr olur, şemaya yansırsın,</h3>
+      <h3>Bahr olur, semaya yansırsın,</h3>
       <h3>Her damlan bir nefes,</h3>
-      <h3>her akışın bir hayat.</h3>
+      <h3>Her akışın bir hayat.</h3>
       <br>
       <h3>Bil ki sen</h3>
       <h3>Hakk'ın en sessiz kelamısın,</h3>
@@ -230,8 +232,8 @@ background: var(--nav-bg);
 
     <div class="content">
       <h1>Ab ile Bahar</h1>
-      <h3>Ab-ı cuyda gülyaprağı yüzer</h3>
-      <h3>Rüzgar öper mehtapon süzer</h3>
+      <h3>Ab-ı cuyda gül yaprağı yüzer</h3>
+      <h3>Rüzgar öper mehtap onu süzer</h3>
       <h3>Gönlümde o yaprak gibi soluk</h3>
       <h3>Her bahar geçer,hüzün bende</h3>
       <br>
