--- a/templates/page3.html
+++ b/templates/page3.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Su ile İlgili Hikaye</title>
+  <link rel="icon" href="{{ url_for('static', filename='Favicon.png') }}" type="image/png">
+  <link rel="shortcut icon" href="{{ url_for('static', filename='Favicon.png') }}" type="image/png">
+
 
   <style>
 	  @import url(//fonts.googleapis.com/css?family=Lato:300:400);
