--- a/templates/page4.html
+++ b/templates/page4.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Kullanılan Kaynakçalar</title>
+  <link rel="icon" href="{{ url_for('static', filename='Favicon.png') }}" type="image/png">
+  <link rel="shortcut icon" href="{{ url_for('static', filename='Favicon.png') }}" type="image/png">
+
   <style>
 
     
