--- a/templates/page5.html
+++ b/templates/page5.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" href="{{ url_for('static', filename='Favicon.png') }}" type="image/png">
+  <link rel="shortcut icon" href="{{ url_for('static', filename='Favicon.png') }}" type="image/png">
+
   <title>Su ile İlgili İlginç Bilgiler</title>
   <style>
 
