--- a/templates/index.html
+++ b/templates/index.html
@@ -209,7 +209,16 @@ body.dark {
   border: 4px solid var(--border-color);
   box-shadow: 0 0 40px rgba(0, 0, 0, 0.15);
   animation: contentanim1 1s ease-out forwards;
+  animation: const-anim 5s ease-out infinite;
   line-height: 1.8;
+}
+
+@keyframes const-anim {
+  0% {top: 0%;}
+  25% {top: 1%;}
+  50% {top: 0%;}
+  75% {bottom: 1%;}
+  100% {bottom: 0%;}
 }
 
 
