--- a/templates/page3.html
+++ b/templates/page3.html
@@ -113,7 +113,7 @@ position: fixed;
 	      
 :root {
   --bg-color: #E7F4FF;
-  --body-color: #8FEBFF;
+  --body-color: #42F2FF;
   --text-color: #1a1a1a;       
   --card-bg: #ffffff;
   --border-color: #3BA9F4;   
