--- a/templates/index.html
+++ b/templates/index.html
@@ -252,8 +252,9 @@ body.dark .content-second {
   color: var(--text-color);
 }
 
-
-
+    .content:hover, .content-second:hover {
+      scale: 2% 1%;
+    }
 
     .paragraph {
       font-size: 1.1em;
