--- a/templates/index.html
+++ b/templates/index.html
@@ -210,7 +210,7 @@ body.dark {
   border: 4px solid var(--border-color);
   box-shadow: 0 0 40px rgba(0, 0, 0, 0.15);
   line-height: 1.8;
-
+ transition: transform 0.3s ease;
 animation:
   contentanim1 1s ease-out forwards,
   floaty 5s ease-in-out infinite;
@@ -240,6 +240,7 @@ animation:
   box-shadow: 0 0 40px rgba(0, 0, 0, 0.15);
   line-height: 1.7;
   font-size: 1.1rem;
+  transition: transform 0.3s ease;
   animation:
     contentanim2 .6s ease-out forwards,
     floaty 5s ease-in-out infinite;
@@ -253,7 +254,7 @@ body.dark .content-second {
 }
 
     .content:hover, .content-second:hover {
-      scale: 2% 1%;
+      transform: scale(1.01, 1.02);
     }
 
     .paragraph {
