--- a/templates/index.html
+++ b/templates/index.html
@@ -254,7 +254,8 @@ body.dark .content-second {
 }
 
     .content:hover, .content-second:hover {
-      transform: scale(1.01, 1.02);
+      animation-play-state: paused;
+      transform: scale(1.1, 1.2);
     }
 
     .paragraph {
