--- a/templates/index.html
+++ b/templates/index.html
@@ -232,7 +232,14 @@ body.dark {
 
 .content:hover,
 .content-second:hover {
-  transform: translateY(scale(1.1, 1.2));
+  transform: translateY(scale(1.05, 1.025));
+}
+    
+body.dark .content,
+body.dark .content-second {
+  background-color: var(--card-bg);
+  border-color: var(--border-color);
+  color: var(--text-color);
 }
 
 
