--- a/templates/index.html
+++ b/templates/index.html
@@ -210,7 +210,7 @@ body.dark {
   box-shadow: 0 0 40px rgba(0, 0, 0, 0.15);
   line-height: 1.8;
   animation:
-    contentanim1 1s ease-out forwards,
+    contentanim1 1s ease-out forwards;
 }
 
 .content {
@@ -227,7 +227,7 @@ body.dark {
   line-height: 1.7;
   font-size: 1.1rem;
   animation:
-    contentanim2 .6s ease-out forwards,
+    contentanim2 .6s ease-out forward;
 }
 
 .content:hover,
