--- a/templates/index.html
+++ b/templates/index.html
@@ -209,8 +209,7 @@ body.dark {
   border: 4px solid var(--border-color);
   box-shadow: 0 0 40px rgba(0, 0, 0, 0.15);
   line-height: 1.8;
-  animation:
-    contentanim1 1s ease-out forwards;
+  animation: contentanim1 1s ease-out forwards;
 }
 
 .content {
@@ -226,13 +225,7 @@ body.dark {
   box-shadow: 0 0 40px rgba(0, 0, 0, 0.15);
   line-height: 1.7;
   font-size: 1.1rem;
-  animation:
-    contentanim2 .6s ease-out forward;
-}
-
-.content:hover,
-.content-second:hover {
-  transform: translateY(scale(1.05, 1.025));
+  animation: contentanim2 .6s ease-out forward;
 }
     
 body.dark .content,
