--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Su kaynaklarının önemi, Türkiye’de kuraklık riski, iklim değişikliğinin suya etkileri, su tasarrufu önerileri ve bilgilendirici içerikler.">
-  <title>Su Önemi</title>
+  <title>Su Önemi / Su Proje Grubu tarafından size sunulmakta...</title>
   <link rel="icon" href="{{ url_for('static', filename='Favicon.png') }}" type="image/png">
   <link rel="shortcut icon" href="{{ url_for('static', filename='Favicon.png') }}" type="image/png">
 
@@ -692,7 +692,6 @@ document.getElementById("openVideoBtn3").onclick = () => {
 };
 document.getElementById("closeVideo").onclick = closeVideoModal;
 document.getElementById("closeKlip").onclick = closeKlipModal;
-document.querySelector(".close-video").onclick = closeModal;
 modal.onclick = (e) => { if (e.target === modal) closeVideoModal(); };
 document.addEventListener("keydown", (e) => { if (e.key === "Escape") closeVideoModal(); });
 kmodal.onclick = (e) => { if (e.target === kmodal) closeKlipModal(); };
