--- a/templates/index.html
+++ b/templates/index.html
@@ -374,7 +374,7 @@ body.dark .content-second {
   right: 20px;
   background: rgba(255, 0, 0, 0.8);
   color: white;
-  border: none;
+  border: double;
   font-size: 20px;
   width: 40px;
   height: 40px;
