--- a/templates/index.html
+++ b/templates/index.html
@@ -258,7 +258,7 @@ body.dark .content-second {
   border: none;
 }
 
-.btn:hover {
+.btn:hover, .close-video:hover {
   background-color: var(--btn-hover);
   transform: translateY(-3px);
   box-shadow: 0 6px 15px rgba(0,0,0,0.3);
