--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Su kaynaklarının önemi, Türkiye’de kuraklık riski, iklim değişikliğinin suya etkileri, su tasarrufu önerileri ve bilgilendirici içerikler.">
   <title>Su Önemi / Su Proje Grubu tarafından size sunulmakta...</title>
   <link rel="icon" href="{{ url_for('static', filename='Favicon.png') }}" type="image/png">
@@ -531,7 +531,7 @@ background: var(--nav-bg);
   </div>
 
   <div class="main-img">
-    <img src="{{ url_for('static', filename='SuProje-Res4.avif') }}" alt="Ana görsel" loading="lazy" decoding="async"/>
+    <img src="{{ url_for('static', filename='SuProje-Res4.avif') }}" alt="Ana görsel" loading="lazy" decoding="async">
   </div>
 
   <div class="content-second">
