--- a/templates/index.html
+++ b/templates/index.html
@@ -59,6 +59,7 @@ body.dark {
       left: 0;
       width: 100%;
       height: 100%;
+      pointer-events: none;
       overflow: hidden;
       z-index: 1; 
     }
