--- a/templates/index.html
+++ b/templates/index.html
@@ -431,7 +431,7 @@ background: var(--nav-bg);
 <body>
   
 <nav class="navbar">
-  <img src="{{ url_for('static', filename='Favicon.png') }}" class="nav-logo" alt="Logo">
+  <img src="{{ url_for('static', filename='Favicon.png') }}" class="nav-logo" alt="Su Logosu/Favicon">
   <div class="nav-links">
     <a href="#" id="openVideoBtn">Video</a>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSc-mcaaHfzqC5UPbGjzMz0C7v7CHU9Qx1w8emhHqgNwNbpHtg/viewform?usp=dialog" target="_blank" rel="noopener noreferrer">Anket</a>
