--- a/templates/page5.html
+++ b/templates/page5.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="{{ url_for('static', filename='Favicon.png') }}" type="image/png">
   <link rel="shortcut icon" href="{{ url_for('static', filename='Favicon.png') }}" type="image/png">
 
