--- a/templates/index.html
+++ b/templates/index.html
@@ -238,7 +238,7 @@ body.dark .content-second {
 
     .paragraph {
       font-size: 1.1em;
-      text-align: justify;
+      text-align: left;
       margin-bottom: 20px;
       font-family: "Times New Roman", Georgia, Garamond
     }
