--- a/templates/index.html
+++ b/templates/index.html
@@ -483,8 +483,8 @@ background: var(--nav-bg);
     <p class="paragraph" >
       Burada ise anketimiz bulunmaktadır.
       Ankette proje ile nasıl hissetiğinizi ve düşüncelerinizi bizim görmemiz için atabilirsiniz.
-      Bunu yapınca bizim websiteyi geliştirmemize neden olur.
-      Ve Kaynakçaya da bakabilirsiniz bizim hangi website ve bilgileri kullandığımız için
+      Bunu yaptıkça bizim websiteyi geliştirmemize bir neden olur.
+      Ve bizim hangi website ve bilgileri kullandığımız için kaynakçaya da bakabilirsiniz.
       Herneyse hemen haberlere dönelim! 
     </p>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSc-mcaaHfzqC5UPbGjzMz0C7v7CHU9Qx1w8emhHqgNwNbpHtg/viewform?usp=dialog" class="btn" target="_blank" rel="noopener noreferrer">Ankete Giriniz?</a>
@@ -498,7 +498,11 @@ background: var(--nav-bg);
     <form action="/ilginc-gercekler" method="post">
       <button class="btn" type="submit">İlginç Gerçekler (Su ile ilgili)</button>
     </form>
+    <form action="/ilginc-su-hayvanlari" method="post">
+      <button class="btn" type="submit">İlginç Su Hayvanları</button>
+    </form>
   </div>
+  
   <div class="content">
     <p class="paragraph center">Su ile ilgili Videomuz/Şarkımız ve Klibimiz.</p>
 
