--- a/templates/page4.html
+++ b/templates/page4.html
@@ -226,6 +226,9 @@ background: var(--nav-bg);
     <br>
     <br>
     <a href="https://hthayat.haberturk.com/su-ile-ilgili-40-ilginc-gercek-1078885" class="btn2">Kullanılan Kaynak (Su ile İlgili İlginç Gerçekler)</a>
+    <br>
+    <br>
+    <a href="https://www.landrover.com.tr/explore-land-rover/one-life-blog/above-beyond/sira-disi-deniz-canlilari" class="btn2">İlginç Su Hayvanları</a>
   </div>
 
   
