--- a/templates/page6.html
+++ b/templates/page6.html
@@ -84,7 +84,6 @@ body.dark {
     }
 
     p {
-      text-align: center;
       margin-bottom: 20px;
       font-size: 1.1em;
     }
@@ -196,9 +195,33 @@ background: var(--nav-bg);
   </div>
 
   <div class="content">
-      <h1>AB-ı ruy</h1>
-      <p>Ab gibi akarsın gönül şahrasında</p>
-      <p>Her katre bir sırdır dilden duada</p>
+      <h1>YAPRAK KOYUNU</h1>
+      <p>1993 yılında Japon adası Kuroshima'nın sularında keşfedilen Costasiella kuroshimae (Yaprak koyunu);
+        Japonya, Endonezya ve Filipinler çevresinde bulunan, 5 mm'ye kadar büyüyebilen sevimli minik bir deniz canlısıdır.
+        Bu benzersiz hayvanın büyüleyici yanı, dünyada fotosentez yapabilen tek deniz canlısı olmasıdır. Nasıl mı? 
+        Sevimli deniz canlısı algleri tükettiğinde, kloroplastları emerler ve bu sayede kendi vücutlarına kloroplastları dahil ederler.
+        Filipinler'deki birçok dalgıç, bu ilginç deniz canlısını, sevimli çizgi film karakteri Shaun the Sheep'e benzetmiştir. </p>
+    
+      <p>Bu deniz omurgasızının, siyah boncuk gibi gözleri, koyun kulaklarına veya böcek antenlerine benzeyen siyah uçlu rinoforları, beyaz renkli baş kısmından dışarıya doğru çıkan yeşil cerataları bulunmaktadır.
+         Deniz salyangozunun cerataları, aloe vera bitkisi veya zebra sukulenti gibi yaprak benzeri uzantılar gibidir.
+         Genellikle pembe, mor veya beyaz uçlara sahiptirler ve içlerinde sindirim bezinin dalları bulunur.
+        Rinoforlar, suyun kimyasal sinyallerini alarak deniz salyangozunun koku alma yetisini sağlar ve besin kaynaklarını bulmasına yardımcı olur.
+        Yaprak koyunlarının insanlara veya diğer deniz canlılarına karşı zehirli olduğunu gösteren hiçbir kanıt yoktur. </p>
+  </div>
+
+  <div class="content">
+      <h1>YAPRAK KOYUNU</h1>
+      <p>1993 yılında Japon adası Kuroshima'nın sularında keşfedilen Costasiella kuroshimae (Yaprak koyunu);
+        Japonya, Endonezya ve Filipinler çevresinde bulunan, 5 mm'ye kadar büyüyebilen sevimli minik bir deniz canlısıdır.
+        Bu benzersiz hayvanın büyüleyici yanı, dünyada fotosentez yapabilen tek deniz canlısı olmasıdır. Nasıl mı? 
+        Sevimli deniz canlısı algleri tükettiğinde, kloroplastları emerler ve bu sayede kendi vücutlarına kloroplastları dahil ederler.
+        Filipinler'deki birçok dalgıç, bu ilginç deniz canlısını, sevimli çizgi film karakteri Shaun the Sheep'e benzetmiştir. </p>
+    
+      <p>Bu deniz omurgasızının, siyah boncuk gibi gözleri, koyun kulaklarına veya böcek antenlerine benzeyen siyah uçlu rinoforları, beyaz renkli baş kısmından dışarıya doğru çıkan yeşil cerataları bulunmaktadır.
+         Deniz salyangozunun cerataları, aloe vera bitkisi veya zebra sukulenti gibi yaprak benzeri uzantılar gibidir.
+         Genellikle pembe, mor veya beyaz uçlara sahiptirler ve içlerinde sindirim bezinin dalları bulunur.
+        Rinoforlar, suyun kimyasal sinyallerini alarak deniz salyangozunun koku alma yetisini sağlar ve besin kaynaklarını bulmasına yardımcı olur.
+        Yaprak koyunlarının insanlara veya diğer deniz canlılarına karşı zehirli olduğunu gösteren hiçbir kanıt yoktur. </p>
   </div>
 
   <script>
